- Content-Item-Bot ----- Louisa/Albemarle completed with placeholder info. ----- Fixed items not showing in proper div
- Charlottesville
----- Commented out for now, purely aesthetic

- IDs
----- Fixed most (all?) instances of duplicate element IDs

--- a/grid.css
+++ b/grid.css
@@ -32,7 +32,7 @@
 }
 
 .content-item-bot {
-    background-color: blueviolet;
+    background-color: lightblue;
     margin: 10px;
     padding: 5px;
     text-align: center;
